fixed scroll jump, added about

--- a/style.css
+++ b/style.css
@@ -4,14 +4,13 @@
     box-sizing: content-box;
 }
 
-
+html{
+    width: 100vw;
+    overflow-x: hidden;
+}
 
 ul {
     list-style: none;
-}
-
-li {
-    text-transform: uppercase;
 }
 
 .header {
@@ -22,6 +21,12 @@ li {
     padding: 1rem;
     background-color: rgb(223, 1, 1);
     color: white;
+
+    height: 3rem;
+    
+}
+
+.header h1 {
     font-size: 2rem;
     -webkit-text-stroke: .05rem black;
     text-shadow: 0 0 .3rem black;
@@ -35,12 +40,32 @@ svg {
 
 #poke-container{
     display: flex;
+    margin-right: 1rem;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     gap: 10px;
+}
 
-    background-color: aliceblue;
+nav{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+nav li {
+    list-style: none;
+    font-size: 1.25rem;
+    margin: .5rem;
+    text-shadow: none;
+}
+
+nav li:hover{
+    text-shadow: none;
+    text-decoration: underline white;
+    cursor: pointer;
 }
 
 .pokeCard {
@@ -48,6 +73,7 @@ svg {
     border-radius: .8rem;
     width: 15rem;
     aspect-ratio: 2 / 3;
+    max-height: 22rem;
     margin-top: .8rem;
     display: flex;
     flex-direction: column;
@@ -55,8 +81,6 @@ svg {
     gap: .5rem;
     padding: .5rem;
     background-color: rgb(255, 209, 109);
-    
-    /* -webkit-text-stroke: .032rem black; */
     font-size: 1.25rem;
 }
 
@@ -181,7 +205,19 @@ ul{
 }
 
 .modal img {
+    width: 15rem;
+    aspect-ratio: 1;
     margin: .8rem .8rem 0 0;
+}
+
+.about > h3{
+    font-size: 1.5rem;
+    margin: 1rem;
+}
+
+.about > p{
+    font-size: 1.25rem;
+    margin: 1rem;
 }
 
 #search{
@@ -189,6 +225,8 @@ ul{
     flex-direction: column;
     align-items: flex-end;
     position: relative;
+
+    height: 4rem;
 }
 
 .searchBar {
@@ -202,14 +240,8 @@ ul{
     border: #000 solid .1rem;
     border-radius: 50vh;
     position: relative;
-
+    margin: .5rem;
     padding: 0 .3rem 0 .3rem;
-    -webkit-text-stroke: 0px;
-}
-
-.noscroll{
-    height: 100%;
-    overflow: hidden;
 }
 
 .filterPopOut {
@@ -217,14 +249,14 @@ ul{
     border-radius: 1rem;
     padding: .5rem;
     position: absolute;
-    top: 5rem;
+    top: 2rem;
     right: 2rem;
 }
 
 .closeBtn {
     position: relative;
     left: 90%;
-    top: -.7rem;
+    top: -.2rem;
     width: 1rem;
     margin: .2rem;
 
@@ -244,7 +276,6 @@ ul{
 .typeFilter > input{
     display: none;
 }
-
 
 
 .typeIcon {
